--- a/index.html
+++ b/index.html
@@ -7,26 +7,35 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
-
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
-
-  Supervisor
-  Monitors activity to identify project roadblocks
-
-  Team Builder
-  Scans our talent network to create the optimal team for your project
-
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
-  
+  <main>
+    <hgroup>
+      <h3>Reliable, efficient delivery</h3>
+      <h1>Powered by Technology</h1>
+      <p class="intro">Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
+    </hgroup>
+    <section>
+        <article class="supervisor">
+          <h2>Supervisor</h2>
+          <p>Monitors activity to identify project roadblocks</p>
+          <img src="images/icon-supervisor.svg" alt="Icon Supervisor"> 
+        </article>
+        <article class="teambuilder">
+          <h2>Team Builder</h2>
+          <p>Scans our talent network to create the optimal team for your project</p>
+          <img src="images/icon-team-builder.svg" alt="Icon Team Builder"> 
+        </article>
+        <article class="karma">
+          <h2>Karma</h2>
+          <p>Regularly evaluates our talent to ensure quality</p>
+          <img src="images/icon-karma.svg" alt="Icon Karma"> 
+        </article>
+        <article class="calculator">
+          <h2>Calculator</h2>
+          <p>Uses data from past projects to provide better delivery estimates</p>
+          <img src="images/icon-calculator.svg" alt="Icon Calculator"> 
+        </article>
+    </section>
+</main>
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
