--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Philippe Tschanun</a>.
+      Coded by <a href="https://www.linkedin.com/in/philippe-tschanun/">Philippe Tschanun</a>.
     </p>
   </footer>
 </body>
